--- a/index.html
+++ b/index.html
@@ -49,11 +49,11 @@
     <div id="adsContainer">
       <iframe id="adFrame" width="320" height="50" frameborder="0" scrolling="no" style="border:none;"></iframe>
     </div>
-    <span class="version">Versão 0.3</span>
+    <span class="version">Versão 0.5</span>
   </footer>
 
   <script>
-    const KEY = "123Bonds";
+    const KEY = "123";
     const maravilhas = [
       { id: 'itaimbezinho', nome: 'Cânion Itaimbezinho', img: 'https://upload.wikimedia.org/wikipedia/commons/6/61/Canion_Itaimbezinho_-_Cambara_do_Sul_-_RS_-_panoramio.jpg' },
       { id: 'fortaleza', nome: 'Cânion Fortaleza', img: 'https://upload.wikimedia.org/wikipedia/commons/f/f2/Canion_Fortaleza_-_Cambara_do_Sul_-_RS.jpg' },
