--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
   </footer>
 
   <script>
-    const KEY = "123";
+    const KEY = "test";
     const maravilhas = [
       { id: 'itaimbezinho', nome: 'Cânion Itaimbezinho', img: 'https://upload.wikimedia.org/wikipedia/commons/6/61/Canion_Itaimbezinho_-_Cambara_do_Sul_-_RS_-_panoramio.jpg' },
       { id: 'fortaleza', nome: 'Cânion Fortaleza', img: 'https://upload.wikimedia.org/wikipedia/commons/f/f2/Canion_Fortaleza_-_Cambara_do_Sul_-_RS.jpg' },
