--- a/index.html
+++ b/index.html
@@ -14,118 +14,131 @@
     .card-content h3 { margin: 10px 0; color: #003366; }
     .card-content button { background: #007bff; border: none; padding: 10px 20px; color: #fff; border-radius: 20px; cursor: pointer; }
     .card-content button:disabled { background: #aaa; cursor: not-allowed; }
-
     .admin-block { background: #fff; padding: 20px; text-align: center; border-top: 2px solid #ccc; }
     .admin-block input[type="password"], .admin-block input[type="text"] { padding: 10px; width: 200px; margin: 5px; border-radius: 10px; border: 1px solid #ccc; }
     .admin-block button { padding: 10px 20px; border: none; border-radius: 20px; background: #28a745; color: #fff; cursor: pointer; margin: 5px; }
     .admin-panel { display: none; margin-top: 20px; }
-
     #adsContainer { text-align: center; padding: 10px 0; background: #fff; display: none; }
     footer { text-align: center; padding: 10px; font-size: 0.9em; color: #555; background: #fff; }
   </style>
 </head>
 <body>
-
-  <header>
-    <h1>Maravilhas de Cambará do Sul</h1>
-    <p>Vote na sua favorita!</p>
-  </header>
-
-  <div class="container" id="cards"></div>
-
-  <div class="admin-block">
-    <input type="password" id="adminCode" placeholder="Código de administrador" />
-    <button onclick="checkCode()">Entrar</button>
-    <div class="admin-panel" id="adminPanel">
-      <h3>Painel de Administração</h3>
-      <label><input type="checkbox" id="adsToggle" onchange="toggleAds()" /> Exibir anúncios</label>
-      <input type="text" id="adIDInput" placeholder="ID do anúncio (ca‑pub‑...)" />
-      <button onclick="saveAdID()">Salvar ID</button>
-      <button onclick="resetVotes()">Resetar Votos</button>
-    </div>
+<header>
+  <h1>Maravilhas de Cambará do Sul</h1>
+  <p>Vote na sua favorita!</p>
+</header>
+<div class="container" id="cards"></div>
+<div class="admin-block">
+  <input type="password" id="adminCode" placeholder="Código de administrador" />
+  <button onclick="checkCode()">Entrar</button>
+  <div class="admin-panel" id="adminPanel">
+    <h3>Painel de Administração</h3>
+    <label><input type="checkbox" id="adsToggle" onchange="toggleAds()" /> Exibir anúncios</label>
+    <input type="text" id="adIDInput" placeholder="ID do anúncio (ca‑pub‑...)" />
+    <button onclick="saveAdID()">Salvar ID</button>
+    <button onclick="resetVotes()">Resetar Votos</button>
   </div>
+</div>
+<footer>
+  <div id="adsContainer">
+    <iframe id="adFrame" width="320" height="50" frameborder="0" scrolling="no" style="border:none;"></iframe>
+  </div>
+  <span class="version">Versão 0.6 com Firebase</span>
+</footer>
 
-  <footer>
-    <div id="adsContainer">
-      <iframe id="adFrame" width="320" height="50" frameborder="0" scrolling="no" style="border:none;"></iframe>
-    </div>
-    <span class="version">Versão 0.5</span>
-  </footer>
+<!-- Firebase -->
+<script type="module">
+  import { initializeApp } from "https://www.gstatic.com/firebasejs/11.7.1/firebase-app.js";
+  import { getDatabase, ref, set, get, child, update } from "https://www.gstatic.com/firebasejs/11.7.1/firebase-database.js";
 
-  <script>
-    const KEY = "ZG4CAP0";
-    const maravilhas = [
-      { id: 'itaimbezinho', nome: 'Cânion Itaimbezinho', img: 'https://upload.wikimedia.org/wikipedia/commons/6/61/Canion_Itaimbezinho_-_Cambara_do_Sul_-_RS_-_panoramio.jpg' },
-      { id: 'fortaleza', nome: 'Cânion Fortaleza', img: 'https://upload.wikimedia.org/wikipedia/commons/f/f2/Canion_Fortaleza_-_Cambara_do_Sul_-_RS.jpg' },
-      { id: 'venancios', nome: 'Cachoeira dos Venâncios', img: 'https://upload.wikimedia.org/wikipedia/commons/4/45/Cachoeira_dos_Ven%C3%A2ncios.jpg' },
-      { id: 'tigre', nome: 'Cachoeira do Tigre Preto', img: 'https://via.placeholder.com/300x180?text=Tigre+Preto' },
-      { id: 'riodoboi', nome: 'Trilha do Rio do Boi', img: 'https://via.placeholder.com/300x180?text=Rio+do+Boi' },
-      { id: 'malacara', nome: 'Cânion Malacara', img: 'https://via.placeholder.com/300x180?text=Malacara' },
-      { id: 'faxinal', nome: 'Serra do Faxinal', img: 'https://via.placeholder.com/300x180?text=Faxinal' }
-    ];
+  const firebaseConfig = {
+    apiKey: "AIzaSyCC74j3Fg68yl4fkfU0E_rCBfF6iVZ0u6Q",
+    authDomain: "cambara-bcf23.firebaseapp.com",
+    projectId: "cambara-bcf23",
+    storageBucket: "cambara-bcf23.firebasestorage.app",
+    messagingSenderId: "642631892737",
+    appId: "1:642631892737:web:ed7e400d285b56262e6500",
+    measurementId: "G-SPVV8VL46J",
+    databaseURL: "https://cambara-bcf23-default-rtdb.firebaseio.com"
+  };
 
-    function initStorage() {
-      if (!localStorage.getItem('votos')) localStorage.setItem('votos', JSON.stringify(Object.fromEntries(maravilhas.map(m=>[m.id,0]))));
-      if (!localStorage.getItem('votadoUnico')) localStorage.setItem('votadoUnico', 'false');
-      if (!localStorage.getItem('adsEnabled')) localStorage.setItem('adsEnabled', 'false');
-      if (!localStorage.getItem('adClient')) localStorage.setItem('adClient', '');
-    }
+  const app = initializeApp(firebaseConfig);
+  const db = getDatabase(app);
 
-    function renderCards() {
-      const votos = JSON.parse(localStorage.getItem('votos'));
-      const votadoUnico = localStorage.getItem('votadoUnico') === 'true';
-      const cont = document.getElementById('cards'); cont.innerHTML = '';
-      maravilhas.forEach(m => {
-        const disabled = votadoUnico ? 'disabled' : '';
-        cont.innerHTML += `<div class="card"><img src="${m.img}" alt="${m.nome}"><div class="card-content"><h3>${m.nome}</h3><p>${votos[m.id]} voto(s)</p><button onclick="vote('${m.id}')" ${disabled}>${disabled?'Voto registrado':'Votar'}</button></div></div>`;
-      });
-    }
+  const KEY = "ZG4CAP0";
+  const maravilhas = [
+    { id: 'itaimbezinho', nome: 'Cânion Itaimbezinho', img: 'https://upload.wikimedia.org/wikipedia/commons/6/61/Canion_Itaimbezinho_-_Cambara_do_Sul_-_RS_-_panoramio.jpg' },
+    { id: 'fortaleza', nome: 'Cânion Fortaleza', img: 'https://upload.wikimedia.org/wikipedia/commons/f/f2/Canion_Fortaleza_-_Cambara_do_Sul_-_RS.jpg' },
+    { id: 'venancios', nome: 'Cachoeira dos Venâncios', img: 'https://upload.wikimedia.org/wikipedia/commons/4/45/Cachoeira_dos_Ven%C3%A2ncios.jpg' },
+    { id: 'tigre', nome: 'Cachoeira do Tigre Preto', img: 'https://via.placeholder.com/300x180?text=Tigre+Preto' },
+    { id: 'riodoboi', nome: 'Trilha do Rio do Boi', img: 'https://via.placeholder.com/300x180?text=Rio+do+Boi' },
+    { id: 'malacara', nome: 'Cânion Malacara', img: 'https://via.placeholder.com/300x180?text=Malacara' },
+    { id: 'faxinal', nome: 'Serra do Faxinal', img: 'https://via.placeholder.com/300x180?text=Faxinal' }
+  ];
 
-    function vote(id) {
-      if (localStorage.getItem('votadoUnico') === 'true') return;
-      const votos = JSON.parse(localStorage.getItem('votos'));
-      votos[id]++;
-      localStorage.setItem('votos', JSON.stringify(votos));
-      localStorage.setItem('votadoUnico', 'true');
+  async function renderCards() {
+    const cont = document.getElementById('cards');
+    cont.innerHTML = '';
+    const dbRef = ref(db);
+    const snapshot = await get(child(dbRef, 'votos'));
+    const votos = snapshot.exists() ? snapshot.val() : {};
+    const voted = localStorage.getItem('votadoUnico') === 'true';
+
+    maravilhas.forEach(m => {
+      const v = votos[m.id] || 0;
+      cont.innerHTML += `<div class="card"><img src="${m.img}" alt="${m.nome}"><div class="card-content"><h3>${m.nome}</h3><p>${v} voto(s)</p><button onclick="vote('${m.id}')" ${voted ? 'disabled' : ''}>${voted ? 'Voto registrado' : 'Votar'}</button></div></div>`;
+    });
+  }
+
+  window.vote = async function(id) {
+    if (localStorage.getItem('votadoUnico') === 'true') return;
+    const votoRef = ref(db, 'votos/' + id);
+    const snapshot = await get(votoRef);
+    const current = snapshot.exists() ? snapshot.val() : 0;
+    await set(votoRef, current + 1);
+    localStorage.setItem('votadoUnico', 'true');
+    renderCards();
+  }
+
+  window.checkCode = function() {
+    if (document.getElementById('adminCode').value === KEY) {
+      document.getElementById('adminPanel').style.display = 'block';
+      document.getElementById('adsToggle').checked = localStorage.getItem('adsEnabled') === 'true';
+    } else alert('Código incorreto!');
+  }
+
+  window.resetVotes = async function() {
+    if (confirm('Resetar todos os votos?')) {
+      const resetObj = Object.fromEntries(maravilhas.map(m => [m.id, 0]));
+      await set(ref(db, 'votos'), resetObj);
+      localStorage.setItem('votadoUnico', 'false');
       renderCards();
     }
+  }
 
-    function checkCode() {
-      if (document.getElementById('adminCode').value === KEY) {
-        document.getElementById('adminPanel').style.display = 'block';
-        document.getElementById('adsToggle').checked = localStorage.getItem('adsEnabled') === 'true';
-      } else alert('Código incorreto!');
-    }
+  window.toggleAds = function() {
+    localStorage.setItem('adsEnabled', document.getElementById('adsToggle').checked);
+    updateAdDisplay();
+  }
 
-    function resetVotes() {
-      if (confirm('Resetar todos os votos?')) {
-        localStorage.setItem('votos', JSON.stringify(Object.fromEntries(maravilhas.map(m=>[m.id,0]))));
-        localStorage.setItem('votadoUnico', 'false');
-        renderCards();
-      }
-    }
+  window.saveAdID = function() {
+    localStorage.setItem('adClient', document.getElementById('adIDInput').value.trim());
+    updateAdDisplay();
+  }
 
-    function toggleAds() {
-      localStorage.setItem('adsEnabled', document.getElementById('adsToggle').checked);
-      updateAdDisplay();
-    }
+  function updateAdDisplay() {
+    const on = localStorage.getItem('adsEnabled') === 'true';
+    const id = localStorage.getItem('adClient');
+    const div = document.getElementById('adsContainer');
+    const frame = document.getElementById('adFrame');
+    if (on && id) {
+      frame.src = `https://googleads.g.doubleclick.net/pagead/ads?client=${id}&slotname=8996594556&format=auto`;
+      div.style.display = 'block';
+    } else div.style.display = 'none';
+  }
 
-    function saveAdID() {
-      localStorage.setItem('adClient', document.getElementById('adIDInput').value.trim());
-      updateAdDisplay();
-    }
-
-    function updateAdDisplay() {
-      const on = localStorage.getItem('adsEnabled') === 'true', id = localStorage.getItem('adClient');
-      const div = document.getElementById('adsContainer'), frame = document.getElementById('adFrame');
-      if (on && id) {
-        frame.src = `https://googleads.g.doubleclick.net/pagead/ads?client=${id}&slotname=8996594556&format=auto`;
-        div.style.display = 'block';
-      } else div.style.display = 'none';
-    }
-
-    // Inicialização
-    initStorage(); renderCards(); updateAdDisplay();
-  </script>
+  renderCards();
+  updateAdDisplay();
+</script>
 </body>
 </html>
