--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     const votadoKey = "votadoUnico";
 
     const maravilhas = [
-      { id: 'itaimbezinho', nome: 'Cânion Itaimbezinho', img: 'https://stock.adobe.com/br/images/beautiful-view-of-a-waterfall-at-itaimbezinho-canyon-cambara-do-sul-rio-grande-do-sul-brazil/473417024' },
+      { id: 'itaimbezinho', nome: 'Cânion Itaimbezinho', img: 'https://pt.m.wikipedia.org/wiki/Ficheiro:Canyon_Itaimbezinho_XI.jpg' },
       { id: 'fortaleza', nome: 'Cânion Fortaleza', img: 'https://stock.adobe.com/br/images/fog-envelopes-the-little-river-canyon-national-preserve-at-sunrise-from-a-high-sandstone-cliff-fort-payne-alabama-panorama/612150270' },
       { id: 'venancios', nome: 'Cachoeira dos Venâncios', img: 'https://stock.adobe.com/br/images/cascata-dos-venancios-em-cambara-do-sul-brasil/259017942' },
       { id: 'tigre', nome: 'Cachoeira do Tigre Preto', img: '/mnt/data/A_high-resolution_photograph_captures_Cachoeira_do.png' },
