--- a/index.html
+++ b/index.html
@@ -68,14 +68,43 @@
     const votadoKey = "votadoUnico";
 
     const maravilhas = [
-      { id: 'itaimbezinho', nome: 'Cânion Itaimbezinho', img: 'https://pt.m.wikipedia.org/wiki/Ficheiro:Canyon_Itaimbezinho_XI.jpg' },
-      { id: 'fortaleza', nome: 'Cânion Fortaleza', img: 'https://stock.adobe.com/br/images/fog-envelopes-the-little-river-canyon-national-preserve-at-sunrise-from-a-high-sandstone-cliff-fort-payne-alabama-panorama/612150270' },
-      { id: 'venancios', nome: 'Cachoeira dos Venâncios', img: 'https://stock.adobe.com/br/images/cascata-dos-venancios-em-cambara-do-sul-brasil/259017942' },
-      { id: 'tigre', nome: 'Cachoeira do Tigre Preto', img: '/mnt/data/A_high-resolution_photograph_captures_Cachoeira_do.png' },
-      { id: 'riodoboi', nome: 'Trilha do Rio do Boi', img: '/mnt/data/A_high-resolution_photograph_captures_a_scene_in_T.png' },
-      { id: 'malacara', nome: 'Cânion Malacara', img: '/mnt/data/A_high-resolution_photograph_captures_Cânion_Malac.png' },
-      { id: 'faxinal', nome: 'Serra do Faxinal', img: '/mnt/data/A_high-resolution_digital_photograph_captures_Serr.png' }
-    ];
+  {
+    id: 'itaimbezinho',
+    nome: 'Cânion Itaimbezinho',
+    img: './imagens/itaimbezinho.jpg'
+  },
+  {
+    id: 'fortaleza',
+    nome: 'Cânion Fortaleza',
+    img: './imagens/fortaleza.jpg'
+  },
+  {
+    id: 'venancios',
+    nome: 'Cachoeira dos Venâncios',
+    img: './imagens/venancios.jpg'
+  },
+  {
+    id: 'tigre',
+    nome: 'Cachoeira do Tigre Preto',
+    img: './imagens/tigre.jpg'
+  },
+  {
+    id: 'riodoboi',
+    nome: 'Trilha do Rio do Boi',
+    img: './imagens/riodoboi.jpg'
+  },
+  {
+    id: 'malacara',
+    nome: 'Cânion Malacara',
+    img: './imagens/malacara.jpg'
+  },
+  {
+    id: 'faxinal',
+    nome: 'Serra do Faxinal',
+    img: './imagens/faxinal.jpg'
+  }
+];
+  
 
     function renderCards(votos) {
       const cont = document.getElementById('cards');
