--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
   {
     id: 'riodoboi',
     nome: 'Trilha do Rio do Boi',
-    img: './imagens/riodoboi.jpg'
+    img: './imagens/Boi.png'
   },
   {
     id: 'malacara',
