--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
     header { background: #004080; color: #fff; padding: 20px; text-align: center; }
     .container { display: flex; flex-wrap: wrap; justify-content: center; padding: 20px; }
     .card { background: #fff; border-radius: 8px; margin: 10px; width: 300px; box-shadow: 0 2px 6px rgba(0,0,0,0.2); overflow: hidden; }
-    .card img { width: 100%; height: 180px; object-fit: cover; }
     .card-content { padding: 15px; text-align: center; }
     .card-content h3 { margin: 10px 0; color: #003366; }
     .card-content button { background: #007bff; border: none; padding: 10px 20px; color: #fff; border-radius: 20px; cursor: pointer; }
@@ -46,7 +45,6 @@
     <span class="version">Versão 0.6</span>
   </footer>
 
-  <!-- Firebase e Lógica -->
   <script type="module">
     import { initializeApp } from "https://www.gstatic.com/firebasejs/11.7.1/firebase-app.js";
     import { getDatabase, ref, get, set, onValue } from "https://www.gstatic.com/firebasejs/11.7.1/firebase-database.js";
@@ -68,42 +66,14 @@
     const votadoKey = "votadoUnico";
 
     const maravilhas = [
-  {
-    id: 'itaimbezinho',
-    nome: 'Cânion Itaimbezinho',
-  },
-  {
-    id: 'fortaleza',
-    nome: 'Cânion Fortaleza',
-    img: './imagens/fortaleza.jpg'
-  },
-  {
-    id: 'venancios',
-    nome: 'Cachoeira dos Venâncios',
-    img: './imagens/venancios.jpg'
-  },
-  {
-    id: 'tigre',
-    nome: 'Cachoeira do Tigre Preto',
-    img: './imagens/tigre.jpg'
-  },
-  {
-    id: 'riodoboi',
-    nome: 'Trilha do Rio do Boi',
-    img: './imagens/riodoboi.jpg'
-  },
-  {
-    id: 'malacara',
-    nome: 'Cânion Malacara',
-    img: './imagens/malacara.jpg'
-  },
-  {
-    id: 'faxinal',
-    nome: 'Serra do Faxinal',
-    img: './imagens/faxinal.jpg'
-  }
-];
-  
+      { id: 'itaimbezinho', nome: 'Cânion Itaimbezinho' },
+      { id: 'fortaleza', nome: 'Cânion Fortaleza' },
+      { id: 'venancios', nome: 'Cachoeira dos Venâncios' },
+      { id: 'tigre', nome: 'Cachoeira do Tigre Preto' },
+      { id: 'riodoboi', nome: 'Trilha do Rio do Boi' },
+      { id: 'malacara', nome: 'Cânion Malacara' },
+      { id: 'faxinal', nome: 'Serra do Faxinal' }
+    ];
 
     function renderCards(votos) {
       const cont = document.getElementById('cards');
@@ -113,7 +83,6 @@
         const count = votos[m.id] || 0;
         cont.innerHTML += `
           <div class="card">
-            <img src="${m.img}" alt="${m.nome}">
             <div class="card-content">
               <h3>${m.nome}</h3>
               <p>${count} voto(s)</p>
@@ -157,7 +126,6 @@
       }
     }
 
-    // Inicialização
     carregarVotos();
   </script>
 </body>
